--- a/index.html
+++ b/index.html
@@ -12,14 +12,13 @@
 
 <body>
   <header>
-    <div class="wrapper">
-      <h1>Harry Ainlay Computing Science</h1>
-      <hr>
-      <p>Learn - Think - Create</p>
-    </div>
+    <a href="../index.html">
+      <img src="../img/ainlay-logo.png" width="32">
+      Harry Ainlay Computing Science
+    </a>
   </header>
 
-  <main class="wrapper">
+  <main>
     <h2>HTML & CSS Basics</h2>
     <hr>
     <p>Learn the basics of HTML & CSS to build simple web pages.</p>
