--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
 <body>
   <header>
-    <a href="../index.html">
-      <img src="../img/ainlay-logo.png" width="32">
+    <a href="index.html">
+      <img src="img/ainlay-logo.png" width="32">
       Harry Ainlay Computing Science
     </a>
   </header>
