main page yt-link

--- a/html-css/html-css-intro.html
+++ b/html-css/html-css-intro.html
@@ -24,7 +24,7 @@
       An Introduction to HTML & CSS
       <a id="yt-link" href="#">
         <img id="yt-img" src="../img/yt_icon_rgb.png" alt="YouTube Icon" width="24">
-        Topic Playlist
+        Topic Explanation
       </a>
     </h1>
 
