--- a/index.html
+++ b/index.html
@@ -68,77 +68,13 @@
           <a href="#">item</a>
         </div>
       </li>
-      <li>
-        <div class="li-div">
-          <a href="#">item</a>
-        </div>
-      </li>
-      <li>
-        <div class="li-div">
-          <a href="#">item</a>
-        </div>
-      </li>
-      <li>
-        <div class="li-div">
-          <a href="#">item</a>
-        </div>
-      </li>
-      <li>
-        <div class="li-div">
-          <a href="#">item</a>
-        </div>
-      </li>
-      <li>
-        <div class="li-div">
-          <a href="#">item</a>
-        </div>
-      </li>
-      <li>
-        <div class="li-div">
-          <a href="#">item</a>
-        </div>
-      </li>
-      <li>
-        <div class="li-div">
-          <a href="#">item</a>
-        </div>
-      </li>
-      <li>
-        <div class="li-div">
-          <a href="#">item</a>
-        </div>
-      </li>
-      <li>
-        <div class="li-div">
-          <a href="#">item</a>
-        </div>
-      </li>
-      <li>
-        <div class="li-div">
-          <a href="#">item</a>
-        </div>
-      </li>
-      <li>
-        <div class="li-div">
-          <a href="#">item</a>
-        </div>
-      </li>
-      <li>
-        <div class="li-div">
-          <a href="#">item</a>
-        </div>
-      </li>
-      <li>
-        <div class="li-div">
-          <a href="#">item</a>
-        </div>
-      </li>
-      <li>
-        <div class="li-div">
-          <a href="#">item</a>
-        </div>
-      </li>
     </ol>
+    <p>
+      <a id="yt-link" href="#">
+        <img id="yt-img" src="img/yt_icon_rgb.png" alt="YouTube Icon" width="24">
+        Video Examples
+      </a>
+    </p>
 
     <h2>JavaScript Fundamentals</h2>
     <hr>
