js-first-steps content

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>repl.it</title>
+  <title>HACS</title>
   <link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans|Raleway|Economica" rel="stylesheet">
 
   <link href="css/home.css" rel="stylesheet" type="text/css" />
@@ -19,43 +19,34 @@
   </header>
 
   <main>
-    <h2>HTML & CSS Basics</h2>
+    <h2>JavaScript First Steps</h2>
     <hr>
-    <p>Learn the basics of HTML & CSS to build simple web pages.</p>
+    <p>Learn the fundamental building blocks of JavaScript (JS) to build interactive web apps.<br>
+      <a id="yt-link" href="#">
+        <img id="yt-img" src="img/yt_icon_rgb.png" alt="YouTube Icon" width="24">
+        JS First Steps Playlist
+      </a>
+    </p>
+
     <ol>
       <li>
         <div class="li-div">
-          <a href="html-css/html-css-intro.html">HTML & CSS Introduction</a>
+          <a href="js-first-steps/js-introduction.html">Introduction</a>
         </div>
       </li>
       <li>
         <div class="li-div">
-          <a href="#">item</a>
+          <a href="js-first-steps/js-comments.html">Comments</a>
         </div>
       </li>
       <li>
         <div class="li-div">
-          <a href="#">item</a>
+          <a href="js-first-steps/dev-console.html">Developer Console</a>
         </div>
       </li>
       <li>
         <div class="li-div">
-          <a href="#">item</a>
-        </div>
-      </li>
-      <li>
-        <div class="li-div">
-          <a href="#">item</a>
-        </div>
-      </li>
-      <li>
-        <div class="li-div">
-          <a href="#">item</a>
-        </div>
-      </li>
-      <li>
-        <div class="li-div">
-          <a href="#">item</a>
+          <a href="js-first-steps/js-string-data.html">String Data</a>
         </div>
       </li>
       <li>
@@ -69,53 +60,12 @@
         </div>
       </li>
     </ol>
-    <p>
-      <a id="yt-link" href="#">
-        <img id="yt-img" src="img/yt_icon_rgb.png" alt="YouTube Icon" width="24">
-        Video Examples
-      </a>
-    </p>
 
-    <h2>JavaScript Fundamentals</h2>
-    <hr>
-    <p>Learn the fundamental building blocks of JavaScript to build interactive web apps.
-      <ol>
-        <li>
-          <div class="li-div">
-            <a href="#">item</a>
-          </div>
-        </li>
-        <li>
-          <div class="li-div">
-            <a href="#">item</a>
-          </div>
-        </li>
-        <li>
-          <div class="li-div">
-            <a href="#">item</a>
-          </div>
-        </li>
-        <li>
-          <div class="li-div">
-            <a href="#">item</a>
-          </div>
-        </li>
-        <li>
-          <div class="li-div">
-            <a href="#">item</a>
-          </div>
-        </li>
-        <li>
-          <div class="li-div">
-            <a href="#">item</a>
-          </div>
-        </li>
-      </ol>
+
+
   </main>
 
-  <script src="js/script.js">
 
-  </script>
 </body>
 
 </html>
