--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       </li>
       <li>
         <div class="li-div">
-          <a href="#">item</a>
+          <a href="js-first-steps/js-number-data.html">Number Data</a>
         </div>
       </li>
       <li>
