--- a/index.html
+++ b/index.html
@@ -56,7 +56,12 @@
       </li>
       <li>
         <div class="li-div">
-          <a href="#">item</a>
+          <a href="js-first-steps/js-variables.html">Variables</a>
+        </div>
+      </li>
+      <li>
+        <div class="li-div">
+          <a href="js-first-steps/js-variable-operators.html">Variable Operators</a>
         </div>
       </li>
     </ol>
