--- a/js-first-steps/js-number-data.html
+++ b/js-first-steps/js-number-data.html
@@ -46,26 +46,40 @@
     <p>JavaScript supports common math operations on Numbers.</p>
 
     <h4>Addition (<code class="lang-js">+</code>)</h4>
-    <pre><code class="lang-js">console.log(2 + 3); // Output=> 5</code></pre>
+    <pre><code class="lang-js">
+console.log(2 + 3); // Output=> 5
+    </code></pre>
     <h4>Subraction (<code class="lang-js">-</code>)</h4>
-    <pre><code class="lang-js">console.log(7 - 3); // Output=> 4</code></pre>
+    <pre><code class="lang-js">
+console.log(7 - 3); // Output=> 4
+    </code></pre>
     <h4>Multiplication (<code class="lang-js">*</code>)</h4>
-    <pre><code class="lang-js">console.log(6 * 5); // Output=> 30</code></pre>
+    <pre><code class="lang-js">
+console.log(6 * 5); // Output=> 30
+    </code></pre>
     <h4>Division (<code class="lang-js">/</code>)</h4>
-    <pre><code class="lang-js">console.log(3 / 2); // Output=> 1.5</code></pre>
+    <pre><code class="lang-js">
+console.log(3 / 2); // Output=> 1.5
+    </code></pre>
     <h4>Remainder (<code class="lang-js">%</code>)</h4>
-    <pre><code class="lang-js">console.log(3 % 2); // Output=> 1
+    <pre><code class="lang-js">
+console.log(3 % 2); // Output=> 1
 console.log(11 % 3); // Output=> 2
-console.log(12 % 4); // Output=> 0</code></pre>
+console.log(12 % 4); // Output=> 0
+    </code></pre>
     <h4>Exponent (<code class="lang-js">**</code>)</h4>
-    <pre><code class="lang-js">console.log(5 ** 2); // Output=> 25
+    <pre><code class="lang-js">
+console.log(5 ** 2); // Output=> 25
 console.log(2 ** 3); // Output=> 8
-console.log(16 ** 0.5); // Output=> 4</code></pre>
+console.log(16 ** 0.5); // Output=> 4
+    </code></pre>
     <h4>Order of Operations</h4>
     <p>JavaScript follows proper order of operations and ( ) may be used in calculations to influence the
       order of operations.</p>
-    <pre><code class="lang-js">console.log(1 + 2 * 3); // Output=> 7
-console.log((1 + 2) * 3); // Output=> 9</code></pre>
+    <pre><code class="lang-js">
+console.log(1 + 2 * 3); // Output=> 7
+console.log((1 + 2) * 3); // Output=> 9
+    </code></pre>
     <hr>
 
 
