--- a/index.html
+++ b/index.html
@@ -46,12 +46,17 @@
       </li>
       <li>
         <div class="li-div">
-          <a href="js-first-steps/js-string-data.html">String Data</a>
+          <a href="js-first-steps/js-string-data.html">String Data Type</a>
         </div>
       </li>
       <li>
         <div class="li-div">
-          <a href="js-first-steps/js-number-data.html">Number Data</a>
+          <a href="js-first-steps/js-number-data.html">Number Data Type</a>
+        </div>
+      </li>
+      <li>
+        <div class="li-div">
+          <a href="js-first-steps/js-type-conversions.html">Type Conversions</a>
         </div>
       </li>
       <li>
