--- a/index.html
+++ b/index.html
@@ -69,6 +69,11 @@
           <a href="js-first-steps/js-variable-operators.html">Variable Operators</a>
         </div>
       </li>
+      <li>
+        <div class="li-div">
+          <a href="js-first-steps/js-input-prompt.html">Input with prompt()</a>
+        </div>
+      </li>
     </ol>
 
 
