--- a/js-first-steps/js-type-conversions.html
+++ b/js-first-steps/js-type-conversions.html
@@ -71,7 +71,8 @@ String(5.2); // Convert the Number 5.2 to the String "5.2"
   Number("5.2"); // Convert the String "5.2" to the Number 5.2
     </code></pre>
 
-    <p>If the String cannot be converted to a Number, the result is <code class="lang-js">NaN</code>: Not a Number.</p>
+    <p>If the String cannot be converted to a Number, the result is <code class="lang-js">NaN</code> <em>(Not a
+        Number)</em>.</p>
     <pre><code class="lang-js">
   Number("twenty"); // Cannot convert, result is NaN
   Number("123n"); // Cannot convert, result is NaN
