--- a/js-first-steps/js-variables.html
+++ b/js-first-steps/js-variables.html
@@ -36,7 +36,8 @@
     <p>To create a variable use the <code class="lang-js">let</code> keyword.</p>
     <p>
       <pre><code class="lang-js">
-// Declare a Variable: tell JS to make a storage container called age
+// DECLARE A VARIABLE: 
+// -tell JS to make a storage container called age
 let age;
       </code></pre>
     </p>
@@ -44,7 +45,8 @@ let age;
     <p>Use the assignment operator, <code class="lang-js">=</code>, to put data into the variable.</p>
     <p>
       <pre><code class="lang-js">
-// Assign data to a Variable: put data into age container
+// ASSIGN DATA TO A VARIABLE: 
+// -put data into age container
 age = 15;
       </code></pre>
     </p>
@@ -53,7 +55,8 @@ age = 15;
     <p>Use the variable name to access the data stored in memory.</p>
     <p>
       <pre><code class="lang-js">
-// Use Variable: log the contents of the age variable to the console
+// USE VARIABLE: 
+// -log the contents of the age variable to the console
 console.log(age); // Output => 15
 console.log(age + 1); // Output => 16
       </code></pre>
@@ -62,7 +65,8 @@ console.log(age + 1); // Output => 16
     <p>An existing variable may be reassigned to store different data.</p>
     <p>
       <pre><code class="lang-js">
-// Reassign Variable: put new data into container
+// REASSIGN VARIABLE: 
+// -put new data into the age container
 age = 18;
 console.log(age); // Output => 18
       </code></pre>
@@ -70,6 +74,7 @@ console.log(age); // Output => 18
     <p>To be concise, we can combine the variable declaration and assignment into a single line.</p>
     <p>
       <pre><code class="lang-js">
+// DECLARE & ASSIGN IN ONE LINE
 let age = 15;
       </code></pre>
     </p>
