--- a/index.html
+++ b/index.html
@@ -76,8 +76,23 @@
       </li>
     </ol>
 
+    <h2>HTML Interaction</h2>
+    <hr>
+    <p>Learn how JavaScript may be used to interact with elements of a web page.<br>
+      <a id="yt-link" href="#">
+        <img id="yt-img" src="img/yt_icon_rgb.png" alt="YouTube Icon" width="24">
+        HTML Interaction Playlist
+      </a>
+    </p>
 
+    <ol>
+      <li>
+        <div class="li-div">
+          <a href="html-interaction/getElementById.html">getElementById()</a>
+        </div>
+      </li>
 
+    </ol>
   </main>
 
 
