--- a/index.html
+++ b/index.html
@@ -91,7 +91,11 @@
           <a href="html-interaction/getElementById.html">getElementById()</a>
         </div>
       </li>
-
+      <li>
+        <div class="li-div">
+          <a href="html-interaction/click-events.html">Click Events</a>
+        </div>
+      </li>
     </ol>
   </main>
 
