--- a/html-interaction/click-events.html
+++ b/html-interaction/click-events.html
@@ -71,7 +71,7 @@ function greeting() {
     <p>The code below will run the greeting function when any part of the web page is clicked.</p>
     <pre><code class="lang-js">
 // Run greeting function when document is clicked
-document.addEvenListener("click", greeting);
+document.addEventListener("click", greeting);
     </code></pre>
     <p>The code below will run the greeting function when the button element is clicked.</p>
     <pre><code class="lang-js">
