--- a/index.html
+++ b/index.html
@@ -96,6 +96,16 @@
           <a href="html-interaction/click-events.html">Click Events</a>
         </div>
       </li>
+      <li>
+        <div class="li-div">
+          <a href="html-interaction/inner-html.html">innerHTML</a>
+        </div>
+      </li>
+      <li>
+        <div class="li-div">
+          <a href="html-interaction/input-elements.html">&lt;input&gt; Elements</a>
+        </div>
+      </li>
     </ol>
   </main>
 
