--- a/index.html
+++ b/index.html
@@ -106,6 +106,11 @@
           <a href="html-interaction/input-elements.html">&lt;input&gt; Elements</a>
         </div>
       </li>
+      <li>
+        <div class="li-div">
+          <a href="html-interaction/modify-style.html">Modify Style</a>
+        </div>
+      </li>
     </ol>
   </main>
 
