--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <main>
     <h2>JavaScript First Steps</h2>
     <hr>
-    <p>Learn the fundamental building blocks of JavaScript (JS) to build interactive web apps.<br>
+    <p>Learn the basics of JavaScript to build simple interactive web apps.<br>
       <a id="yt-link" href="#">
         <img id="yt-img" src="img/yt_icon_rgb.png" alt="YouTube Icon" width="24">
         JS First Steps Playlist
@@ -109,6 +109,38 @@
       <li>
         <div class="li-div">
           <a href="html-interaction/modify-style.html">Modify Style</a>
+        </div>
+      </li>
+    </ol>
+
+    <h2>JavaScript Control Structures</h2>
+    <hr>
+    <p>Learn how JavaScript may be used to select and repeat code with if statements and loops.<br>
+      <a id="yt-link" href="#">
+        <img id="yt-img" src="img/yt_icon_rgb.png" alt="YouTube Icon" width="24">
+        JS Control Structures Playlist
+      </a>
+    </p>
+
+    <ol>
+      <li>
+        <div class="li-div">
+          <a href="js-control/boolean-expressions.html">Boolean Expressions</a>
+        </div>
+      </li>
+      <li>
+        <div class="li-div">
+          <a href="js-control/if-statements.html">If Statements</a>
+        </div>
+      </li>
+      <li>
+        <div class="li-div">
+          <a href="js-control/while-loops.html">While Loops</a>
+        </div>
+      </li>
+      <li>
+        <div class="li-div">
+          <a href="js-control/for-loops.html">For Loops</a>
         </div>
       </li>
     </ol>
