play with style

--- a/index.html
+++ b/index.html
@@ -74,6 +74,11 @@
           <a href="js-first-steps/js-input-prompt.html">Input with prompt()</a>
         </div>
       </li>
+      <li>
+        <div class="li-div">
+          <a href="js-first-steps/js-input-prompt.html">IPO Formula Asgn</a>
+        </div>
+      </li>
     </ol>
 
     <h2>HTML Interaction</h2>
