--- a/index.html
+++ b/index.html
@@ -5,18 +5,54 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>HACS</title>
+  <script src="https://kit.fontawesome.com/5da9f5ff62.js" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans|Raleway|Economica" rel="stylesheet">
 
   <link href="css/home.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
+  <nav>
+    <div class="wrapper">
+      <a id="logo" href="index.html">
+        <img src="img/ainlay-logo.png" width="32">
+        HACS
+      </a>
+      <a id="js-ref" href="#">JS Reference</a>
+    </div>
+  </nav>
+
   <header>
-    <a href="index.html">
-      <img src="img/ainlay-logo.png" width="32">
-      Harry Ainlay Computing Science
-    </a>
+    <h1>Learn JavaScript</h1>
+    <p class="lead">Create Web Games and Applications with HTML, CSS and JavaScript.</p>
+    <p class="motto">Learn - Think - Create</p>
   </header>
+
+  <section>
+    <h2>HTML & CSS Basics</h2>
+    <hr>
+    <p class="descr">Learn the basics of HTML & CSS to build simple web pages.</p>
+    <a class="item" href="#">
+      <i class="far fa-play-circle fa-lg"></i> Video Lessons
+    </a>
+    <a class="item" href="#">
+      <i class="far fa-keyboard fa-lg"></i> Assignment
+    </a>
+  </section>
+
+  <section>
+    <h2>HTML & CSS Basics</h2>
+    <hr>
+    <p class="descr">Learn the basics of HTML & CSS to build simple web pages.</p>
+    <a class="item" href="#">
+      <i class="far fa-play-circle fa-lg"></i> Video Lessons
+    </a>
+    <a class="item" href="#">
+      <i class="far fa-keyboard fa-lg"></i> Assignment
+    </a>
+  </section>
+
+
 
   <main>
     <h2>JavaScript First Steps</h2>
