lighten header colors

--- a/index.html
+++ b/index.html
@@ -41,11 +41,14 @@
   </section>
 
   <section>
-    <h2>HTML & CSS Basics</h2>
+    <h2>JavaScript First Steps</h2>
     <hr>
-    <p class="descr">Learn the basics of HTML & CSS to build simple web pages.</p>
+    <p class="descr">Learn the basics of JavaScript to build simple interactive web apps.</p>
     <a class="item" href="#">
       <i class="far fa-play-circle fa-lg"></i> Video Lessons
+    </a>
+    <a class="item" href="#">
+      <i class="far fa-keyboard fa-lg"></i> Assignment
     </a>
     <a class="item" href="#">
       <i class="far fa-keyboard fa-lg"></i> Assignment
