--- a/js-first-steps/js-introduction.html
+++ b/js-first-steps/js-introduction.html
@@ -5,28 +5,32 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>HACS</title>
-  <link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans|Raleway|Economica" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/5da9f5ff62.js" crossorigin="anonymous"></script>
 
+  <link href="../css/home.css" rel="stylesheet" type="text/css" />
   <link href="../css/page.css" rel="stylesheet" type="text/css" />
   <link href="../css/prism.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-  <header>
-    <a href="../index.html">
-      <img src="../img/ainlay-logo.png" width="32">
-      Harry Ainlay Computing Science
-    </a>
-  </header>
+  <nav>
+    <div class="wrapper">
+      <a id="logo" href="../index.html">
+        <img src="../img/ainlay-logo.png" width="32">
+        HACS
+      </a>
+      <a id="js-ref" href="../js-reference.html">JS Reference</a>
+    </div>
+  </nav>
 
-  <main class="wrapper">
-    <h1>
-      Introduction to JavaScript
+  <main>
+    <div class="title">
+      <h1>Introduction to JavaScript</h1>
       <a id="yt-link" href="#">
-        <img id="yt-img" src="../img/yt_icon_rgb.png" alt="YouTube Icon" width="24">
+        <i class="far fa-play-circle fa-lg"></i>
         Topic Explanation
       </a>
-    </h1>
+    </div>
 
     <hr>
 
