--- a/js-reference.html
+++ b/js-reference.html
@@ -4,8 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Learn JS</title>
-  <script src="https://kit.fontawesome.com/5da9f5ff62.js" crossorigin="anonymous"></script>
+  <title>JS Reference</title>
 
   <link href="css/home.css" rel="stylesheet" type="text/css" />
 </head>
@@ -22,49 +21,15 @@
   </nav>
 
   <header>
-    <h1>Learn JavaScript</h1>
-    <p class="lead">Create Web Games and Applications with HTML, CSS and JavaScript.</p>
-    <p class="motto">Html - Css - JavaScript</p>
+    <h1>JavaScript Reference</h1>
+    <p class="lead">A repository of notes explaining fundamental HTML, CSS & JavaScript concepts.</p>
+    <p class="motto">Learn - Think - Create</p>
   </header>
 
   <section>
-    <h2>HTML & CSS Basics</h2>
-    <hr>
-    <p class="descr">Learn the basics of HTML & CSS to build simple web pages.</p>
-    <a class="item" href="#">
-      <i class="far fa-play-circle fa-lg"></i> Video Lessons
-    </a>
-    <a class="item" href="#">
-      <i class="far fa-keyboard fa-lg"></i> Assignment
-    </a>
-  </section>
-
-  <section>
     <h2>JavaScript First Steps</h2>
     <hr>
-    <p class="descr">Learn the basics of JavaScript to build simple interactive web apps.</p>
-    <a class="item" href="#">
-      <i class="far fa-play-circle fa-lg"></i> Video Lessons
-    </a>
-    <a class="item" href="#">
-      <i class="far fa-keyboard fa-lg"></i> Assignment
-    </a>
-    <a class="item" href="#">
-      <i class="far fa-keyboard fa-lg"></i> Assignment
-    </a>
-  </section>
-
-
-
-  <main>
-    <h2>JavaScript First Steps</h2>
-    <hr>
-    <p>Learn the basics of JavaScript to build simple interactive web apps.<br>
-      <a id="yt-link" href="#">
-        <img id="yt-img" src="img/yt_icon_rgb.png" alt="YouTube Icon" width="24">
-        JS First Steps Playlist
-      </a>
-    </p>
+    <p class="descr">Learn the basics of JavaScript to build simple interactive web applications.<br></p>
 
     <ol>
       <li>
@@ -121,12 +86,7 @@
 
     <h2>HTML Interaction</h2>
     <hr>
-    <p>Learn how JavaScript may be used to interact with elements of a web page.<br>
-      <a id="yt-link" href="#">
-        <img id="yt-img" src="img/yt_icon_rgb.png" alt="YouTube Icon" width="24">
-        HTML Interaction Playlist
-      </a>
-    </p>
+    <p class="descr">Learn how JavaScript may be used to interact with elements of a web page.<br></p>
 
     <ol>
       <li>
@@ -158,12 +118,7 @@
 
     <h2>JavaScript Control Structures</h2>
     <hr>
-    <p>Learn how JavaScript may be used to select and repeat code with if statements and loops.<br>
-      <a id="yt-link" href="#">
-        <img id="yt-img" src="img/yt_icon_rgb.png" alt="YouTube Icon" width="24">
-        JS Control Structures Playlist
-      </a>
-    </p>
+    <p class="descr">Learn how JavaScript may be used to select and repeat code with if statements and loops.<br></p>
 
     <ol>
       <li>
@@ -187,8 +142,7 @@
         </div>
       </li>
     </ol>
-  </main>
-
+  </section>
 
 </body>
 
