--- a/index.html
+++ b/index.html
@@ -11,20 +11,12 @@
 </head>
 
 <body>
-  <nav>
-    <div class="wrapper">
-      <a id="logo" href="index.html">
-        <img src="img/ainlay-logo.png" width="32">
-        HACS
-      </a>
-      <a id="js-ref" href="js-reference.html">JS Reference</a>
-    </div>
-  </nav>
+  <nav></nav>
 
   <header>
     <h1>Learn JavaScript</h1>
     <p class="lead">Create Web Games and Applications with HTML, CSS and JavaScript.</p>
-    <p class="motto">Html - Css - JavaScript</p>
+    <p class="motto">Html - JavaScript - Css</p>
   </header>
 
   <section>
@@ -32,7 +24,7 @@
     <hr>
     <p class="descr">Learn the basics of HTML & CSS to build simple web pages.</p>
     <a class="item" href="#">
-      <i class="far fa-play-circle fa-lg"></i> Video Lessons
+      <i class="fab fa-youtube fa-lg"></i> Video Lessons
     </a>
     <a class="item" href="#">
       <i class="far fa-keyboard fa-lg"></i> Assignment
@@ -44,7 +36,7 @@
     <hr>
     <p class="descr">Learn the basics of JavaScript to build simple interactive web apps.</p>
     <a class="item" href="#">
-      <i class="far fa-play-circle fa-lg"></i> Video Lessons
+      <i class="fab fa-youtube fa-lg"></i> Video Lessons
     </a>
     <a class="item" href="#">
       <i class="far fa-keyboard fa-lg"></i> Assignment
@@ -54,142 +46,11 @@
     </a>
   </section>
 
-
-
-  <main>
-    <h2>JavaScript First Steps</h2>
-    <hr>
-    <p>Learn the basics of JavaScript to build simple interactive web apps.<br>
-      <a id="yt-link" href="#">
-        <img id="yt-img" src="img/yt_icon_rgb.png" alt="YouTube Icon" width="24">
-        JS First Steps Playlist
-      </a>
-    </p>
-
-    <ol>
-      <li>
-        <div class="li-div">
-          <a href="js-first-steps/js-introduction.html">Introduction</a>
-        </div>
-      </li>
-      <li>
-        <div class="li-div">
-          <a href="js-first-steps/js-comments.html">Comments</a>
-        </div>
-      </li>
-      <li>
-        <div class="li-div">
-          <a href="js-first-steps/dev-console.html">Developer Console</a>
-        </div>
-      </li>
-      <li>
-        <div class="li-div">
-          <a href="js-first-steps/js-string-data.html">String Data Type</a>
-        </div>
-      </li>
-      <li>
-        <div class="li-div">
-          <a href="js-first-steps/js-number-data.html">Number Data Type</a>
-        </div>
-      </li>
-      <li>
-        <div class="li-div">
-          <a href="js-first-steps/js-type-conversions.html">Type Conversions</a>
-        </div>
-      </li>
-      <li>
-        <div class="li-div">
-          <a href="js-first-steps/js-variables.html">Variables</a>
-        </div>
-      </li>
-      <li>
-        <div class="li-div">
-          <a href="js-first-steps/js-variable-operators.html">Variable Operators</a>
-        </div>
-      </li>
-      <li>
-        <div class="li-div">
-          <a href="js-first-steps/js-input-prompt.html">Input with prompt()</a>
-        </div>
-      </li>
-      <li>
-        <div class="li-div">
-          <a href="js-first-steps/js-input-prompt.html">IPO Formula Asgn</a>
-        </div>
-      </li>
-    </ol>
-
-    <h2>HTML Interaction</h2>
-    <hr>
-    <p>Learn how JavaScript may be used to interact with elements of a web page.<br>
-      <a id="yt-link" href="#">
-        <img id="yt-img" src="img/yt_icon_rgb.png" alt="YouTube Icon" width="24">
-        HTML Interaction Playlist
-      </a>
-    </p>
-
-    <ol>
-      <li>
-        <div class="li-div">
-          <a href="html-interaction/getElementById.html">getElementById()</a>
-        </div>
-      </li>
-      <li>
-        <div class="li-div">
-          <a href="html-interaction/click-events.html">Click Events</a>
-        </div>
-      </li>
-      <li>
-        <div class="li-div">
-          <a href="html-interaction/inner-html.html">innerHTML</a>
-        </div>
-      </li>
-      <li>
-        <div class="li-div">
-          <a href="html-interaction/input-elements.html">&lt;input&gt; Elements</a>
-        </div>
-      </li>
-      <li>
-        <div class="li-div">
-          <a href="html-interaction/modify-style.html">Modify Style</a>
-        </div>
-      </li>
-    </ol>
-
-    <h2>JavaScript Control Structures</h2>
-    <hr>
-    <p>Learn how JavaScript may be used to select and repeat code with if statements and loops.<br>
-      <a id="yt-link" href="#">
-        <img id="yt-img" src="img/yt_icon_rgb.png" alt="YouTube Icon" width="24">
-        JS Control Structures Playlist
-      </a>
-    </p>
-
-    <ol>
-      <li>
-        <div class="li-div">
-          <a href="js-control/boolean-expressions.html">Boolean Expressions</a>
-        </div>
-      </li>
-      <li>
-        <div class="li-div">
-          <a href="js-control/if-statements.html">If Statements</a>
-        </div>
-      </li>
-      <li>
-        <div class="li-div">
-          <a href="js-control/while-loops.html">While Loops</a>
-        </div>
-      </li>
-      <li>
-        <div class="li-div">
-          <a href="js-control/for-loops.html">For Loops</a>
-        </div>
-      </li>
-    </ol>
-  </main>
-
-
+  <!-- Load Nav -->
+  <script src="/js/load-nav.js"></script>
+  <script>
+    loadFileIntoEl("/includes/nav.html", "nav");
+  </script>
 </body>
 
 </html>
