--- a/js-reference.html
+++ b/js-reference.html
@@ -10,15 +10,7 @@
 </head>
 
 <body>
-  <nav>
-    <div class="wrapper">
-      <a id="logo" href="index.html">
-        <img src="img/ainlay-logo.png" width="32">
-        HACS
-      </a>
-      <a id="js-ref" href="js-reference.html">JS Reference</a>
-    </div>
-  </nav>
+  <nav></nav>
 
   <header>
     <h1>JavaScript Reference</h1>
@@ -144,6 +136,11 @@
     </ol>
   </section>
 
+  <!-- Load Nav -->
+  <script src="/js/load-nav.js"></script>
+  <script>
+    loadFileIntoEl("/includes/nav.html", "nav");
+  </script>
 </body>
 
 </html>
