--- a/js-reference.html
+++ b/js-reference.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width">
   <title>JS Reference</title>
 
-  <link rel="shortcut icon" type="image/png" href="/img/ainlay-logo-blue-white.png">
-  <link href="/css/home.css" rel="stylesheet" type="text/css" />
+  <link rel="shortcut icon" type="image/png" href="img/ainlay-logo-blue-white.png">
+  <link href="css/home.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -27,52 +27,52 @@
     <ol>
       <li>
         <div class="li-div">
-          <a href="/js-first-steps/js-introduction.html">Introduction</a>
+          <a href="js-first-steps/js-introduction.html">Introduction</a>
         </div>
       </li>
       <li>
         <div class="li-div">
-          <a href="/js-first-steps/js-comments.html">Comments</a>
+          <a href="js-first-steps/js-comments.html">Comments</a>
         </div>
       </li>
       <li>
         <div class="li-div">
-          <a href="/js-first-steps/dev-console.html">Developer Console</a>
+          <a href="js-first-steps/dev-console.html">Developer Console</a>
         </div>
       </li>
       <li>
         <div class="li-div">
-          <a href="/js-first-steps/js-string-data.html">String Data Type</a>
+          <a href="js-first-steps/js-string-data.html">String Data Type</a>
         </div>
       </li>
       <li>
         <div class="li-div">
-          <a href="/js-first-steps/js-number-data.html">Number Data Type</a>
+          <a href="js-first-steps/js-number-data.html">Number Data Type</a>
         </div>
       </li>
       <li>
         <div class="li-div">
-          <a href="/js-first-steps/js-type-conversions.html">Type Conversions</a>
+          <a href="js-first-steps/js-type-conversions.html">Type Conversions</a>
         </div>
       </li>
       <li>
         <div class="li-div">
-          <a href="/js-first-steps/js-variables.html">Variables</a>
+          <a href="js-first-steps/js-variables.html">Variables</a>
         </div>
       </li>
       <li>
         <div class="li-div">
-          <a href="/js-first-steps/js-variable-operators.html">Variable Operators</a>
+          <a href="js-first-steps/js-variable-operators.html">Variable Operators</a>
         </div>
       </li>
       <li>
         <div class="li-div">
-          <a href="/js-first-steps/js-input-prompt.html">Input with prompt()</a>
+          <a href="js-first-steps/js-input-prompt.html">Input with prompt()</a>
         </div>
       </li>
       <li>
         <div class="li-div">
-          <a href="/js-first-steps/js-input-prompt.html">IPO Formula Asgn</a>
+          <a href="js-first-steps/js-input-prompt.html">IPO Formula Asgn</a>
         </div>
       </li>
     </ol>
@@ -84,27 +84,27 @@
     <ol>
       <li>
         <div class="li-div">
-          <a href="/html-interaction/getElementById.html">getElementById()</a>
+          <a href="html-interaction/getElementById.html">getElementById()</a>
         </div>
       </li>
       <li>
         <div class="li-div">
-          <a href="/html-interaction/click-events.html">Click Events</a>
+          <a href="html-interaction/click-events.html">Click Events</a>
         </div>
       </li>
       <li>
         <div class="li-div">
-          <a href="/html-interaction/inner-html.html">innerHTML</a>
+          <a href="html-interaction/inner-html.html">innerHTML</a>
         </div>
       </li>
       <li>
         <div class="li-div">
-          <a href="/html-interaction/input-elements.html">&lt;input&gt; Elements</a>
+          <a href="html-interaction/input-elements.html">&lt;input&gt; Elements</a>
         </div>
       </li>
       <li>
         <div class="li-div">
-          <a href="/html-interaction/modify-style.html">Modify Style</a>
+          <a href="html-interaction/modify-style.html">Modify Style</a>
         </div>
       </li>
     </ol>
@@ -116,31 +116,31 @@
     <ol>
       <li>
         <div class="li-div">
-          <a href="/js-control/boolean-expressions.html">Boolean Expressions</a>
+          <a href="js-control/boolean-expressions.html">Boolean Expressions</a>
         </div>
       </li>
       <li>
         <div class="li-div">
-          <a href="/js-control/if-statements.html">If Statements</a>
+          <a href="js-control/if-statements.html">If Statements</a>
         </div>
       </li>
       <li>
         <div class="li-div">
-          <a href="/js-control/while-loops.html">While Loops</a>
+          <a href="js-control/while-loops.html">While Loops</a>
         </div>
       </li>
       <li>
         <div class="li-div">
-          <a href="/js-control/for-loops.html">For Loops</a>
+          <a href="js-control/for-loops.html">For Loops</a>
         </div>
       </li>
     </ol>
   </section>
 
   <!-- Load Nav -->
-  <script src="/js/load-nav.js"></script>
+  <script src="js/load-nav.js"></script>
   <script>
-    loadFileIntoEl("/includes/nav.html", "nav");
+    loadFileIntoEl("includes/nav.html", "nav");
   </script>
 </body>
 
