--- a/js-first-steps/js-comments.html
+++ b/js-first-steps/js-comments.html
@@ -5,28 +5,24 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>HACS</title>
-  <link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans|Raleway|Economica" rel="stylesheet">
 
-  <link href="/css/page.css" rel="stylesheet" type="text/css" />
-  <link href="/css/prism.css" rel="stylesheet" type="text/css" />
+  <link rel="shortcut icon" type="image/png" href="../img/ainlay-logo-blue-white.png">
+  <link href="../css/home.css" rel="stylesheet" type="text/css" />
+  <link href="../css/page.css" rel="stylesheet" type="text/css" />
+  <link href="../css/prism.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-  <header>
-    <a href="../index.html">
-      <img src="../img/ainlay-logo.png" width="32">
-      Harry Ainlay Computing Science
-    </a>
-  </header>
+  <nav></nav>
 
-  <main class="wrapper">
-    <h1>
-      JavaScript Comments
+  <main>
+    <div class="title">
+      <h1>JavaScript Comments</h1>
       <a id="yt-link" href="#">
-        <img id="yt-img" src="../img/yt_icon_rgb.png" alt="YouTube Icon" width="24">
+        <i class="fab fa-youtube fa-lg"></i>
         Topic Explanation
       </a>
-    </h1>
+    </div>
 
     <hr>
 
@@ -61,12 +57,12 @@ alert("World"); // A comment after a statement
   </main>
 
   <!-- Load Nav -->
-  <script src="/js/load-nav.js"></script>
+  <script src="../js/load-nav.js"></script>
   <script>
-    loadFileIntoEl("/includes/nav.html", "nav");
+    loadFileIntoEl("../includes/nav.html", "nav");
   </script>
 
-  <script src="/js/prism.js"></script>
+  <script src="../js/prism.js"></script>
 </body>
 
 </html>
