update load nav in pages

--- a/hacs/js-first-steps/js-comments.html
+++ b/hacs/js-first-steps/js-comments.html
@@ -5,11 +5,12 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>HACS</title>
+  <script src="https://kit.fontawesome.com/5da9f5ff62.js" crossorigin="anonymous"></script>
 
-  <link rel="shortcut icon" type="image/png" href="../img/ainlay-logo-blue-white.png">
-  <link href="../css/home.css" rel="stylesheet" type="text/css" />
-  <link href="../css/page.css" rel="stylesheet" type="text/css" />
-  <link href="../css/prism.css" rel="stylesheet" type="text/css" />
+  <link rel="shortcut icon" type="image/png" href="/img/ainlay-logo-blue-white.png">
+  <link href="/css/home.css" rel="stylesheet" type="text/css" />
+  <link href="/css/page.css" rel="stylesheet" type="text/css" />
+  <link href="/css/prism.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -17,7 +18,7 @@
 
   <main>
     <div class="title">
-      <h1>JavaScript Comments</h1>
+      <h1>JS Comments</h1>
       <a id="yt-link" href="#">
         <i class="fab fa-youtube fa-lg"></i>
         Topic Explanation
@@ -57,12 +58,12 @@ alert("World"); // A comment after a statement
   </main>
 
   <!-- Load Nav -->
-  <script src="../js/load-nav.js"></script>
+  <script src="/js/load-nav.js"></script>
   <script>
-    loadFileIntoEl("../includes/nav.html", "nav");
+    loadFileIntoEl("/includes/nav.html", "nav");
   </script>
 
-  <script src="../js/prism.js"></script>
+  <script src="/js/prism.js"></script>
 </body>
 
 </html>
