--- a/hacs/js-first-steps/js-input-prompt.html
+++ b/hacs/js-first-steps/js-input-prompt.html
@@ -5,28 +5,25 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>HACS</title>
-  <link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans|Raleway|Economica" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/5da9f5ff62.js" crossorigin="anonymous"></script>
 
-  <link href="../css/page.css" rel="stylesheet" type="text/css" />
-  <link href="../css/prism.css" rel="stylesheet" type="text/css" />
+  <link rel="shortcut icon" type="image/png" href="/img/ainlay-logo-blue-white.png">
+  <link href="/css/home.css" rel="stylesheet" type="text/css" />
+  <link href="/css/page.css" rel="stylesheet" type="text/css" />
+  <link href="/css/prism.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-  <header>
-    <a href="../index.html">
-      <img src="../img/ainlay-logo.png" width="32">
-      Harry Ainlay Computing Science
-    </a>
-  </header>
+  <nav></nav>
 
-  <main class="wrapper">
-    <h1>
-      JS Input with Prompt()
+  <main>
+    <div class="title">
+      <h1>JS Input - prompt()</h1>
       <a id="yt-link" href="#">
-        <img id="yt-img" src="../img/yt_icon_rgb.png" alt="YouTube Icon" width="24">
+        <i class="fab fa-youtube fa-lg"></i>
         Topic Explanation
       </a>
-    </h1>
+    </div>
 
     <hr>
 
@@ -48,7 +45,7 @@ alert("Hello " + name + "!");
     <hr>
 
     <h2>Numerical Input</h2>
-    <p>Input received from the <code class="lang-js">prompt()</code> function is <em>always returns as a String data
+    <p>Input received from the <code class="lang-js">prompt()</code> function is <em>always returned as a String data
         type</em>.</p>
     <p>If you want numerical input, convert the String that <code class="lang-js">prompt()</code> returns to a Number
       data type using the <code class="lang-js">Number()</code> function or the unary <code class="lang-js">+</code>
@@ -64,7 +61,13 @@ let num2 = Number(prompt("Please enter a number:"));
 
   </main>
 
-  <script src="../js/prism.js"></script>
+  <!-- Load Nav -->
+  <script src="/js/load-nav.js"></script>
+  <script>
+    loadFileIntoEl("/includes/nav.html", "nav");
+  </script>
+
+  <script src="/js/prism.js"></script>
 </body>
 
 </html>
