--- a/hacs/index.html
+++ b/hacs/index.html
@@ -7,8 +7,8 @@
   <title>Learn JS</title>
   <script src="https://kit.fontawesome.com/5da9f5ff62.js" crossorigin="anonymous"></script>
 
-  <link rel="shortcut icon" type="image/png" href="img/ainlay-logo-blue-white.png">
-  <link href="css/home.css" rel="stylesheet" type="text/css" />
+  <link rel="shortcut icon" type="image/png" href="/img/ainlay-logo-blue-white.png">
+  <link href="/css/home.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -22,7 +22,6 @@
 
   <section>
     <h2>HTML & CSS Basics</h2>
-    <hr>
     <p class="descr">Learn the basics of HTML & CSS to build simple web pages.</p>
     <a class="item" href="#">
       <i class="fab fa-youtube fa-lg"></i> Video Lessons
@@ -34,7 +33,6 @@
 
   <section>
     <h2>JavaScript First Steps</h2>
-    <hr>
     <p class="descr">Learn the basics of JavaScript to build simple interactive web apps.</p>
     <a class="item" href="#">
       <i class="fab fa-youtube fa-lg"></i> Video Lessons
@@ -48,9 +46,9 @@
   </section>
 
   <!-- Load Nav -->
-  <script src="js/load-nav.js"></script>
+  <script src="/js/load-nav.js"></script>
   <script>
-    loadFileIntoEl("includes/nav.html", "nav");
+    loadFileIntoEl("/includes/nav.html", "nav");
   </script>
 </body>
 
