--- a/hacs/js-first-steps/dev-console.html
+++ b/hacs/js-first-steps/dev-console.html
@@ -5,11 +5,12 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>HACS</title>
+  <script src="https://kit.fontawesome.com/5da9f5ff62.js" crossorigin="anonymous"></script>
 
-  <link rel="shortcut icon" type="image/png" href="../img/ainlay-logo-blue-white.png">
-  <link href="../css/home.css" rel="stylesheet" type="text/css" />
-  <link href="../css/page.css" rel="stylesheet" type="text/css" />
-  <link href="../css/prism.css" rel="stylesheet" type="text/css" />
+  <link rel="shortcut icon" type="image/png" href="/img/ainlay-logo-blue-white.png">
+  <link href="/css/home.css" rel="stylesheet" type="text/css" />
+  <link href="/css/page.css" rel="stylesheet" type="text/css" />
+  <link href="/css/prism.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -89,12 +90,12 @@ console.log("Hello Console!");
   </main>
 
   <!-- Load Nav -->
-  <script src="../js/load-nav.js"></script>
+  <script src="/js/load-nav.js"></script>
   <script>
-    loadFileIntoEl("../includes/nav.html", "nav");
+    loadFileIntoEl("/includes/nav.html", "nav");
   </script>
 
-  <script src="../js/prism.js"></script>
+  <script src="/js/prism.js"></script>
 </body>
 
 </html>
