--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <title>Learn JS</title>
   <script src="https://kit.fontawesome.com/5da9f5ff62.js" crossorigin="anonymous"></script>
 
-  <link rel="shortcut icon" type="image/png" href="/img/ainlay-logo-blue-white.png">
-  <link href="/css/home.css" rel="stylesheet" type="text/css" />
+  <link rel="shortcut icon" type="image/png" href="img/ainlay-logo-blue-white.png">
+  <link href="css/home.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -46,9 +46,9 @@
   </section>
 
   <!-- Load Nav -->
-  <script src="/js/load-nav.js"></script>
+  <script src="js/load-nav.js"></script>
   <script>
-    loadFileIntoEl("/includes/nav.html", "nav");
+    loadFileIntoEl("includes/nav.html", "nav");
   </script>
 </body>
 
