--- a/js-reference.html
+++ b/js-reference.html
@@ -20,7 +20,7 @@
   </header>
 
   <section>
-    <h2>JavaScript First Steps</h2>
+    <h2>JS First Steps</h2>
     <hr>
     <p class="descr">Learn the basics of JavaScript to build simple interactive web applications.<br></p>
 
@@ -72,7 +72,7 @@
       </li>
     </ol>
 
-    <h2>HTML Interaction</h2>
+    <h2>JS HTML Interaction</h2>
     <hr>
     <p class="descr">Learn how JavaScript may be used to interact with elements of a web page.<br></p>
 
@@ -104,7 +104,7 @@
       </li>
     </ol>
 
-    <h2>JavaScript Control Structures</h2>
+    <h2>JS Control Structures</h2>
     <hr>
     <p class="descr">Learn how JavaScript may be used to select and repeat code with if statements and loops.<br></p>
 
